fixed overflowing grids and flexboxes with js

--- a/src/styles/ProjectBar.sass
+++ b/src/styles/ProjectBar.sass
@@ -78,27 +78,14 @@ $btnWidth: 40px
             background-position-x: 0
             .thumbnail-container
                 aspect-ratio: 1/1
-            
-
-    //@media screen and (max-width: globals.$mobileBreakpoint)
-    //    animation: slideLeftMobile 0.5s
-    //    margin: 0
-    //    top: calc(100% + 5px)
-    //    left: 0
-    //    width: 100%
-    //    height: 100%
-    //    background: none !important
+        
 
     
 .item-container
-    //display: flex
-    //flex-direction: column
-    //justify-content: space-between
-    //flex-wrap: wrap
     @include globals.hoverElem
     display: grid
     grid-auto-flow: column
-    grid-template-rows: repeat(7, auto)
+    //grid-template-rows: repeat(7, auto)
     gap: 26px
     padding: 10px
     transition: 0.2s all
@@ -123,12 +110,6 @@ $btnWidth: 40px
         box-shadow: globals.$shadow2
         gap: 3px
         background-color: rgba(85, 81, 97, 0.65)
-    //@media screen and (max-height: 900px)
-    //    grid-template-rows: repeat(6, auto)
-    //@media screen and (max-height: 750px)
-    //    grid-template-rows: repeat(4, auto)
-    //@media screen and (max-height: 500px)
-    //    grid-template-rows: repeat(2, auto)
 
 
 @media screen and (max-width: 900px)
