--- a/src/styles/WebdevMain.sass
+++ b/src/styles/WebdevMain.sass
@@ -9,7 +9,6 @@
     justify-content: center
 
 .pick-container
-    width: 1490px
     display: flex
     align-items: flex-start
     justify-content: flex-start
@@ -23,18 +22,7 @@
     margin-right: auto
     text-align: center
 
-@media screen and (max-width: 1550px)
-    .webdevPick-container
-        width: 1110px
-
-@media screen and (max-width: 1170px)
-    .webdevPick-container
-        width: 730px
-
 @media screen and (max-width: 790px)
-    .webdevPick-container
-        width: 90%
-
     .webdevPick-Outer
         padding-top: 5vw
         padding-bottom: 20vw
@@ -43,4 +31,4 @@
     .pick-Outer
         padding: 5vh 10px
         .pick-container
-            width: 100%
+            width: 100% !important
